--- a/app/views/pages/homepage.ejs
+++ b/app/views/pages/homepage.ejs
@@ -1,4 +1,4 @@
 <h1 class="display-4">Welcome</h1>
-<p class="mb-4">My app</p>
+<p class="mb-4">Post App</p>
 <a href="/posts/list" class="btn btn-light">View Posts</a>
-<a href="/posts/add" class="btn btn-light">Add Posts</a>
+<a href="/user/list" class="btn btn-light">View Users</a>
