--- a/app/views/layouts/layout.ejs
+++ b/app/views/layouts/layout.ejs
@@ -51,11 +51,30 @@
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/user/list">Users</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/posts/list">Posts</a>
           </li>
+          <% if(session.authenticated) { %>
           <li class="nav-item">
             <a class="nav-link" href="/posts/add">Add Post</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/profile/<%= session.User.id %>"><%= session.User.name %></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/session/destroy">Logout</a>
+          </li>
+          <% } %>
+          <% if(!session.authenticated) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/session/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/signup">Sign Up</a>
+          </li>
+          <% } %>
         </ul>
       </div>
     </nav>
