--- a/app/views/pages/list.ejs
+++ b/app/views/pages/list.ejs
@@ -1,9 +1,33 @@
 <h1 class="display-4">Posts</h1>
+
+<form method="post" action="/posts/searchList">
+    <div class="form-group">
+        <input name="searchValue" class="form-control">
+        <br>
+        <input type="hidden" name="_csrf" value="<%= _csrf %>" />
+        <input type="submit" value="Search" class="form-control btn btn-primary">
+    </div>
+</form> 
+<% if(session.authenticated) { %>
+<div class="dropdown">
+    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Filter</button>
+
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="/posts/list">All Posts</a>
+        <form method="post" action="/posts/filterList">
+            <input class="dropdown-item" type="submit" value="Just my posts">
+            <input type="hidden" name="_csrf" value="<%= _csrf %>" />
+            <input type="hidden" name="name" value="<%= session.User.name %>" />
+        </form>
+    </div>
+</div> 
+<% } %>
 <table class="table table-striped">
     <thead>
         <tr>
             <th>#</th>
             <th>Title</th>
+            <th>Author</th>
             <th></th>
         </tr>
     </thead>
@@ -12,11 +36,27 @@
             <tr>
                 <td><%= post.id %></td>
                 <td><%= post.title %></td>
+                <td><%= post.author %></td>
                 <td>
+                    <% if(post.status) { %>
+                    <a href="/posts/view/<%= post.id %>" class="btn btn-primary">View</a>
+                    <% } else { %>
+                    <a href="/posts/view/<%= post.id %>" class="btn btn-primary disabled">View</a>
+                    <% } %>
+                    <% if(session.authenticated && session.User.admin) { %>
+                    <form action="/posts/toggle/<%= post.id %>" method="post" class="d-inline">
+                        <input type="hidden" name="_csrf" value="<%= _csrf %>" />
+                        <input type="hidden" name="status" value="<%= !post.status %>" />
+                        <input type="submit" value="Active" class="btn btn-dark">
+                    </form>
                     <a href="/posts/edit/<%= post.id %>" class="btn btn-primary">Edit</a>
+                    <% } %>
+                    <% if((session.authenticated && session.User.admin)) { %>
                     <form action="/posts/delete/<%= post.id %>" method="post" class="d-inline">
+                        <input type="hidden" name="_csrf" value="<%= _csrf %>" />
                         <input type="submit" value="Delete" class="btn btn-danger">
                     </form>
+                    <% } %>
                 </td>
             </tr>
         <% }) %>
